# V-RUS.EXE

./: Cargo.toml  README.md
src/: agent.rs  main.rs  memory.rs  ollama.rs  service.rs  shell.rs
