[package]
name = "virus"
version = "0.1.0"
edition = "2021"
description = "an autonomous AI agent that lives on your machine"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
windows-service = "0.7"
zip = "2"
which = "7"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
